k8s/dekorate-demo/kubernetes.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.dekorate.io/vcs-url: https://github.com/rmortale/dekorate-demo
    app.dekorate.io/commit-id: b827f8b2bbf70b2972254d3ca181a50b930e1915
  labels:
    app.kubernetes.io/name: dekorate-demo
    app.kubernetes.io/version: 1.0.4-SNAPSHOT
  name: dekorate-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0.4-SNAPSHOT
      app.kubernetes.io/name: dekorate-demo
  template:
    metadata:
      annotations:
        app.dekorate.io/vcs-url: https://github.com/rmortale/dekorate-demo
        app.dekorate.io/commit-id: b827f8b2bbf70b2972254d3ca181a50b930e1915
      labels:
        app.kubernetes.io/version: 1.0.4-SNAPSHOT
        app.kubernetes.io/name: dekorate-demo
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: ghcr.io/rmortale/dekorate-demo:1.0.4-SNAPSHOT
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: dekorate-demo
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.dekorate.io/vcs-url: https://github.com/rmortale/dekorate-demo
    app.dekorate.io/commit-id: b827f8b2bbf70b2972254d3ca181a50b930e1915
  labels:
    app.kubernetes.io/name: dekorate-demo
    app.kubernetes.io/version: 1.0.4-SNAPSHOT
  name: dekorate-demo
spec:
  rules:
    - host: dekorate.internal
      http:
        paths:
          - backend:
              service:
                name: dekorate-demo
                port:
                  name: http
            path: /
            pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.dekorate.io/vcs-url: https://github.com/rmortale/dekorate-demo
    app.dekorate.io/commit-id: b827f8b2bbf70b2972254d3ca181a50b930e1915
  labels:
    app.kubernetes.io/name: dekorate-demo
    app.kubernetes.io/version: 1.0.4-SNAPSHOT
  name: dekorate-demo
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: dekorate-demo
    app.kubernetes.io/version: 1.0.4-SNAPSHOT
  type: ClusterIP
